--- a/lesson01/index.html
+++ b/lesson01/index.html
@@ -51,7 +51,7 @@
                     <input type="text" id="living-location" size="10"><br>
                  </div>
             </div>
-//Виконані зміни по рефакторінгу, тільки певної частини. 00:00 13 серпня
+<!--Виконані зміни по рефакторінгу, тільки певної частини. 00:00 13 серпня-->
 
             <h4>Що ви зазвичай робите на вихідних:</h4>
             <input type="checkbox" name="spice" id="sleep"><label for="sleep">Сон</label><br>
