--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
     <title>Title</title>
+    <!--https://www.w3schools.com/tags/att_meta_charset.asp-->
+    <meta charset="UTF-8">
+    <!--https://www.w3schools.com/css/css_rwd_viewport.asp-->
+    <meta name="viewport" content="width=1024, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--https://www.w3.org/TR/html401/present/styles.html
+    https://www.w3schools.com/tags/tag_link.asp-->
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+    <div class="bg-main-header">
+        <header class="header container">
+            <div class="overflow">
+                <div class="main-logo">
+                    <img src="img/logo.png" alt="">
+                    <h1>AION</h1>
+                </div>
+                <button class="btn-menu">menu</button>
+            </div>
+            <span class="main-header-title">hello!</span>
+            <span class="main-header-subtitle">we are creative agency</span>
+        </header>
+    </div>
 
 </body>
 </html>
