--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -5,15 +5,14 @@
     <!--https://www.w3schools.com/tags/att_meta_charset.asp-->
     <meta charset="UTF-8">
     <!--https://www.w3schools.com/css/css_rwd_viewport.asp-->
-    <meta name="viewport" content="width=1024, user-scalable=yes">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--https://www.w3.org/TR/html401/present/styles.html
     https://www.w3schools.com/tags/tag_link.asp-->
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-    <div class="bg-main-header">
-        <header class="header container">
+    <header class="header">
+        <div class="container">
             <div class="overflow">
                 <div class="main-logo">
                     <img src="img/logo.png" alt="">
@@ -23,8 +22,7 @@
             </div>
             <span class="main-header-title">hello!</span>
             <span class="main-header-subtitle">we are creative agency</span>
-        </header>
-    </div>
-
+        </div>
+    </header>
 </body>
 </html>
