--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -25,86 +25,97 @@
             <span class="main-header-subtitle">we are creative agency</span>
         </div>
     </header>
-    <main class="main">
-        <section class="bg-circle between-box-overlap">
-            <div class="between-box container">
-                <h2 class="about-us">about us</h2>
-                <p>
-                    la pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
-                </p>
-                <a href="#" class="btn-read-more">read more</a>
-            </div>
-            <!--image block with circle-->
-            <ul class="about-us-listing">
-                <li>
-                    <div class="img-wrapper">
-                        <img src="./img/elipsa.png" alt="photo">
-                    </div>
-                    <span class="img-text">Lorem ipsum dolor sit.</span>
-                </li>
 
-                <li>
-                    <div class="img-wrapper">
-                        <img src="./img/elipsa.png" alt="photo">
-                    </div>
-                    <span class="img-text">Lorem ipsum dolor sit.</span>
-                </li>
 
-                <li>
-                    <div class="img-wrapper">
-                        <img src="./img/elipsa.png" alt="photo">
-                    </div>
-                    <span class="img-text">Lorem ipsum dolor sit.</span>
-                </li>
+<!--need refactoring-->
+    <!--<main class="main">-->
+        <!--<section class="bg-circle between-box-overlap">-->
+            <!--<div class="between-box container">-->
+                <!--<h2 class="about-us">about us</h2>-->
+                <!--<p>-->
+                    <!--la pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt-->
+                <!--</p>-->
+                <!--<a href="#" class="btn-read-more">read more</a>-->
+            <!--</div>-->
+            <!--&lt;!&ndash;image block with circle&ndash;&gt;-->
+            <!--<ul class="about-us-listing">-->
+                <!--<li>-->
+                    <!--<div class="img-wrapper">-->
+                        <!--<img src="./img/elipsa.png" alt="photo">-->
+                    <!--</div>-->
+                    <!--<span class="img-text">Lorem ipsum dolor sit.</span>-->
+                <!--</li>-->
 
-            </ul>
-        </section>
-        <section class="sct-project">
-            <div class="center-img">
-                <img class="img-slider" src="./img/browsers.png" alt="">
-            </div>
-        </section>
-        <section class="bg-circle center-img">
-            <h2>Lorem ipsum dolor.</h2>
+                <!--<li>-->
+                    <!--<div class="img-wrapper">-->
+                        <!--<img src="./img/elipsa.png" alt="photo">-->
+                    <!--</div>-->
+                    <!--<span class="img-text">Lorem ipsum dolor sit.</span>-->
+                <!--</li>-->
 
-            <ul class="block-listing-card">
-                <li>
-                    <h2>Lorem ipsum dolor.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis.</p>
-                    <a href="#" class="btn-read-more">read more</a>
-                </li>
+                <!--<li>-->
+                    <!--<div class="img-wrapper">-->
+                        <!--<img src="./img/elipsa.png" alt="photo">-->
+                    <!--</div>-->
+                    <!--<span class="img-text">Lorem ipsum dolor sit.</span>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</section>-->
 
-                <li>
-                    <h2>Lorem ipsum dolor.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis.</p>
-                    <a href="#" class="btn-read-more">read more</a>
-                </li>
 
-            </ul>
-        </section>
-        <section class="bg-company">
-            <ul class="company-listing">
-                <li>
-                    <a href=""></a>
-                    <img src="./img/MSFT_logo_png.png" alt="">
-                </li>
-                <li>
-                    <a href=""></a>
-                    <img src="./img/Samsung-logo-2015-Nobg.png" alt="">
-                </li>
-                <li>
-                    <a href=""></a>
-                    <img src="./img/ibm_logo.png" alt="">
-                </li>
-                <li>
-                    <a href=""></a>
-                    <img src="./img/Google_2015_logo.svg.png" alt="">
-                </li>
-            </ul>
-        </section>
-    </main>
-    <footer class="footer">
+        <!--<section class="sct-project">-->
+            <!--<div class="center-img">-->
+                <!--<img class="img-slider" src="./img/browsers.png" alt="">-->
+            <!--</div>-->
+        <!--</section>-->
 
-    </footer>
+
+        <!--<section class="bg-circle center-img">-->
+            <!--<h2>Lorem ipsum dolor.</h2>-->
+            <!--<ul class="block-listing-card">-->
+                <!--<li>-->
+                    <!--<h2>Lorem ipsum dolor.</h2>-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis.</p>-->
+                    <!--<a href="#" class="btn-read-more">read more</a>-->
+                <!--</li>-->
+
+                <!--<li>-->
+                    <!--<h2>Lorem ipsum dolor.</h2>-->
+                    <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis.</p>-->
+                    <!--<a href="#" class="btn-read-more">read more</a>-->
+                <!--</li>-->
+
+            <!--</ul>-->
+        <!--</section>-->
+
+
+        <!--<section class="bg-company">-->
+            <!--<ul class="company-listing">-->
+                <!--<li>-->
+                    <!--<a href=""></a>-->
+                    <!--<img src="./img/MSFT_logo_png.png" alt="">-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href=""></a>-->
+                    <!--<img src="./img/Samsung-logo-2015-Nobg.png" alt="">-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href=""></a>-->
+                    <!--<img src="./img/ibm_logo.png" alt="">-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<a href=""></a>-->
+                    <!--<img src="./img/Google_2015_logo.svg.png" alt="">-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</section>-->
+
+    <!--</main>-->
+
+
+
+    <!--<footer class="footer">-->
+
+    <!--</footer>-->
 </body>
 </html>
