first step to refactoring owne project

--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--https://www.w3.org/TR/html401/present/styles.html
     https://www.w3schools.com/tags/tag_link.asp-->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="overflow">
                 <div class="main-logo">
-                    <img src="img/logo.png" alt="">
+                    <img src="images/aion-logo.png" alt="">
                     <h1>AION</h1>
                 </div>
                 <button class="btn-menu">menu</button>
@@ -27,7 +27,7 @@
     </header>
 
 
-<!--need refactoring-->
+
     <!--<main class="main">-->
         <!--<section class="bg-circle between-box-overlap">-->
             <!--<div class="between-box container">-->
@@ -37,40 +37,42 @@
                 <!--</p>-->
                 <!--<a href="#" class="btn-read-more">read more</a>-->
             <!--</div>-->
+
+
             <!--&lt;!&ndash;image block with circle&ndash;&gt;-->
             <!--<ul class="about-us-listing">-->
                 <!--<li>-->
-                    <!--<div class="img-wrapper">-->
-                        <!--<img src="./img/elipsa.png" alt="photo">-->
+                    <!--<div class="images-wrapper">-->
+                        <!--<img src="./images/aion-elips.png" alt="photo">-->
                     <!--</div>-->
-                    <!--<span class="img-text">Lorem ipsum dolor sit.</span>-->
+                    <!--<span class="images-text">Lorem ipsum dolor sit.</span>-->
                 <!--</li>-->
 
                 <!--<li>-->
-                    <!--<div class="img-wrapper">-->
-                        <!--<img src="./img/elipsa.png" alt="photo">-->
+                    <!--<div class="images-wrapper">-->
+                        <!--<img src="./images/aion-elips.png" alt="photo">-->
                     <!--</div>-->
-                    <!--<span class="img-text">Lorem ipsum dolor sit.</span>-->
+                    <!--<span class="images-text">Lorem ipsum dolor sit.</span>-->
                 <!--</li>-->
 
                 <!--<li>-->
-                    <!--<div class="img-wrapper">-->
-                        <!--<img src="./img/elipsa.png" alt="photo">-->
+                    <!--<div class="images-wrapper">-->
+                        <!--<img src="./images/aion-elips.png" alt="photo">-->
                     <!--</div>-->
-                    <!--<span class="img-text">Lorem ipsum dolor sit.</span>-->
+                    <!--<span class="images-text">Lorem ipsum dolor sit.</span>-->
                 <!--</li>-->
             <!--</ul>-->
         <!--</section>-->
 
 
         <!--<section class="sct-project">-->
-            <!--<div class="center-img">-->
-                <!--<img class="img-slider" src="./img/browsers.png" alt="">-->
+            <!--<div class="center-images">-->
+                <!--<img class="images-slider" src="./images/aion-browsers.png" alt="">-->
             <!--</div>-->
         <!--</section>-->
 
 
-        <!--<section class="bg-circle center-img">-->
+        <!--<section class="bg-circle center-images">-->
             <!--<h2>Lorem ipsum dolor.</h2>-->
             <!--<ul class="block-listing-card">-->
                 <!--<li>-->
@@ -93,19 +95,19 @@
             <!--<ul class="company-listing">-->
                 <!--<li>-->
                     <!--<a href=""></a>-->
-                    <!--<img src="./img/MSFT_logo_png.png" alt="">-->
+                    <!--<img src="./images/logo/aion-microsoft-logo.png" alt="">-->
                 <!--</li>-->
                 <!--<li>-->
                     <!--<a href=""></a>-->
-                    <!--<img src="./img/Samsung-logo-2015-Nobg.png" alt="">-->
+                    <!--<img src="./images/logo/aion-samsung-logo.png" alt="">-->
                 <!--</li>-->
                 <!--<li>-->
                     <!--<a href=""></a>-->
-                    <!--<img src="./img/ibm_logo.png" alt="">-->
+                    <!--<img src="./images/logo/aion-ibm-logo.png" alt="">-->
                 <!--</li>-->
                 <!--<li>-->
                     <!--<a href=""></a>-->
-                    <!--<img src="./img/Google_2015_logo.svg.png" alt="">-->
+                    <!--<img src="./images/logo/aion-google-logo.png" alt="">-->
                 <!--</li>-->
             <!--</ul>-->
         <!--</section>-->
