--- a/lesson02/index.html
+++ b/lesson02/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--https://www.w3.org/TR/html401/present/styles.html
     https://www.w3schools.com/tags/tag_link.asp-->
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +17,7 @@
         <div class="container">
             <div class="overflow">
                 <div class="main-logo">
-                    <img src="img/logo.png" alt="">
+                    <img src="images/aion-logo.png" alt="">
                     <h1>AION</h1>
                 </div>
                 <button class="btn-menu">menu</button>
@@ -38,73 +39,65 @@
             <ul class="about-us-listing">
                 <li>
                     <div class="img-wrapper">
-                        <img src="./img/elipsa.png" alt="photo">
+                        <img src="images/aion-elips.png" alt="photo">
                     </div>
                     <span class="img-text">Lorem ipsum dolor sit.</span>
                 </li>
-
                 <li>
                     <div class="img-wrapper">
-                        <img src="./img/elipsa.png" alt="photo">
+                        <img src="images/aion-elips.png" alt="photo">
                     </div>
                     <span class="img-text">Lorem ipsum dolor sit.</span>
                 </li>
-
                 <li>
                     <div class="img-wrapper">
-                        <img src="./img/elipsa.png" alt="photo">
+                        <img src="images/aion-elips.png" alt="photo">
                     </div>
                     <span class="img-text">Lorem ipsum dolor sit.</span>
                 </li>
-
             </ul>
         </section>
         <section class="sct-project">
             <div class="center-img">
-                <img class="img-slider" src="./img/browsers.png" alt="">
+                <img class="img-slider" src="images/aion-browsers.png" alt="">
             </div>
         </section>
         <section class="bg-circle center-img">
             <h2>Lorem ipsum dolor.</h2>
-
             <ul class="block-listing-card">
                 <li>
                     <h2>Lorem ipsum dolor.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis.</p>
                     <a href="#" class="btn-read-more">read more</a>
                 </li>
-
                 <li>
                     <h2>Lorem ipsum dolor.</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, officiis.</p>
                     <a href="#" class="btn-read-more">read more</a>
                 </li>
-
             </ul>
         </section>
         <section class="bg-company">
             <ul class="company-listing">
                 <li>
                     <a href=""></a>
-                    <img src="./img/MSFT_logo_png.png" alt="">
+                    <img src="images/logo/aion-microsoft-logo.png" alt="">
                 </li>
                 <li>
                     <a href=""></a>
-                    <img src="./img/Samsung-logo-2015-Nobg.png" alt="">
+                    <img src="images/logo/aion-samsung-logo.png" alt="">
                 </li>
                 <li>
                     <a href=""></a>
-                    <img src="./img/ibm_logo.png" alt="">
+                    <img src="images/logo/aion-ibm-logo.png" alt="">
                 </li>
                 <li>
                     <a href=""></a>
-                    <img src="./img/Google_2015_logo.svg.png" alt="">
+                    <img src="images/logo/aion-google-logo.png" alt="">
                 </li>
             </ul>
         </section>
     </main>
-    <footer class="footer">
-
-    </footer>
+    <footer class="footer"></footer>
 </body>
 </html>
