--- a/lesson02/test.html
+++ b/lesson02/test.html
@@ -8,20 +8,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--https://www.w3.org/TR/html401/present/styles.html
     https://www.w3schools.com/tags/tag_link.asp-->
+    <link rel="stylesheet" type="text/css" href="./styles/reset.css">
     <link rel="stylesheet" type="text/css" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-<header class="header">
-    <div class="container">
-        <div class="overflow">
-            <div class="main-logo">
-                <img src="images/aion-logo.png" alt="">
-                <h1>AION</h1>
-            </div>
-            <button class="btn-menu">menu</button>
+    <header class="header">
+        <div class="container">
+            <div class="aion-header-overflow">
+                <div class="aion-logo">
+                    <img src="images/aion-logo.png" alt="AION main logo">
+                    <h1>AION</h1>
+                </div> <!--main logo-->
+                <button class="aion-menu-btn">menu</button>
+            </div> <!--overflow-->
+            <span class="main-header-title">hello!</span>
+            <span class="main-header-subtitle">we are creative agency</span>
         </div>
-        <span class="main-header-title">hello!</span>
-        <span class="main-header-subtitle">we are creative agency</span>
-    </div>
-</header>
+    </header>
+    <main class="main">
+        <section class="section">
+            <div class="container">
+                <h2>Section must contain head</h2>
+
+                You content
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2>Section must contain head</h2>
+
+                You content
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2>Section must contain head</h2>
+
+                You content
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2>Section must contain head</h2>
+
+                You content
+            </div>
+        </section>
+        <section class="section">
+            <div class="container">
+                <h2>Section must contain head</h2>
+
+                You content
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            You content
+        </div>
+    </footer>
+</body>
+</html>
