Change class names in header

--- a/lesson02/test.html
+++ b/lesson02/test.html
@@ -22,9 +22,9 @@
                 </div> <!--main logo-->
                 <button class="aion-menu-btn">menu</button>
             </div> <!--overflow-->
-            <span class="main-header-title">hello!</span>
-            <span class="main-header-subtitle">we are creative agency</span>
-        </div>
+            <span class="aion-header-title">hello!</span>
+            <span class="aion-header-subtitle">we are creative agency</span>
+        </div> <!--container-->
     </header>
     <main class="main">
         <section class="section">
